RESOLVED FIXED19053
Source code not visible when script is paused before onload fires
https://bugs.webkit.org/show_bug.cgi?id=19053
Summary Source code not visible when script is paused before onload fires
Anthony Ricaud
Reported 2008-05-14 12:31:56 PDT
Steps to reproduce: 1. Open the testcase 2. Open and attach the Inspector's debugger 3. Put a breakpoint on the "var p =" line. 4. Refresh the page The script is now paused but the source code is not visible in the Scripts tab.
Attachments
Testcase (536 bytes, text/html)
2008-05-14 12:33 PDT, Anthony Ricaud
no flags
Proposed patch (10.40 KB, patch)
2008-10-04 21:03 PDT, Timothy Hatcher
mrowe: review+
Anthony Ricaud
Comment 1 2008-05-14 12:33:18 PDT
Created attachment 21130 [details] Testcase
Timothy Hatcher
Comment 2 2008-05-15 12:22:53 PDT
Anthony Ricaud
Comment 3 2008-05-29 08:14:33 PDT
Apparently, this is happening for scripts running before the end of onload event. From IRC : aroben: Rik|work: I bet your script is running before onload fires Rik|work: aroben: source code is not printed even in a onload function aroben: Rik|work: yeah, nothing seems to work until after onload
Timothy Hatcher
Comment 4 2008-05-29 08:17:56 PDT
We don't show source because the resource hasn't finished loading untill after onload fires. We need a way to show source before the load finishes.
Timothy Hatcher
Comment 5 2008-10-04 21:03:17 PDT
Created attachment 24098 [details] Proposed patch
Mark Rowe (bdash)
Comment 6 2008-10-04 21:06:32 PDT
Comment on attachment 24098 [details] Proposed patch r=me
Timothy Hatcher
Comment 7 2008-10-04 21:13:33 PDT
Landed in r37313.
Note You need to log in before you can comment on or make changes to this bug.